replays/errorlog-20181106-234813-0500-1541566092-32-32-0.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    for y in range(game_map.height):
    ^
IndentationError: unexpected indent

